# backend/src/routes/positionRoutes.ts
@@ -1,8 +1,12 @@
-import { getCandidatesByPosition, getInterviewFlowByPosition } from '../presentation/controllers/positionController';
-
+import {
+  getAllVisiblePositions,
+  getCandidatesByPosition,
+  getInterviewFlowByPosition,
+} from '../presentation/controllers/positionController';
 
 const router = require('express').Router();
 
+router.get('/', getAllVisiblePositions);
 router.get('/:id/candidates', getCandidatesByPosition);
 router.get('/:id/interviewflow', getInterviewFlowByPosition);
 
